src/test/contracts/negative/duplicate_record_field.mligo
type r = { foo : int ; foo : int }

let main (_p : r) (_s : unit) : operation list * unit =
  (([] : operation list), ())
